[package]
authors = ["The Rust Project Developers"]
name = "c_str"
version = "0.0.0"

[lib]
name = "c_str"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
alloc = { path = "../liballoc" }
collections = { path = "../libcollections" }
core = { path = "../libcore" }
libc = { path = "../rustc/libc_shim" }
pal_common = { path = "../libpal_common" }
