[package]
authors = ["The Rust Project Developers"]
name = "pal_common"
version = "0.0.0"

[lib]
name = "pal_common"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
alloc = { path = "../liballoc" }
collections = { path = "../libcollections" }
core = { path = "../libcore" }
rustc_unicode = { path = "../librustc_unicode" }
