[package]
authors = ["The Rust Project Developers"]
name = "pal_unix"
version = "0.0.0"

[lib]
name = "pal_unix"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
collections = { path = "../libcollections" }
core = { path = "../libcore" }
libc = { path = "../rustc/libc_shim" }
pal_common = { path = "../libpal_common" }
