[package]
authors = ["The Rust Project Developers"]
name = "pal_windows"
version = "0.0.0"

[lib]
name = "pal_windows"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
collections = { path = "../libcollections" }
core = { path = "../libcore" }
c_str = { path = "../libc_str" }
libc = { path = "../rustc/libc_shim" }
pal_common = { path = "../libpal_common" }
