[package]
authors = ["The Rust Project Developers"]
name = "std"
version = "0.0.0"
build = "build.rs"

[lib]
name = "std"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
alloc = { path = "../liballoc" }
alloc_jemalloc = { path = "../liballoc_jemalloc", optional = true }
alloc_system = { path = "../liballoc_system" }
panic_unwind = { path = "../libpanic_unwind" }
panic_abort = { path = "../libpanic_abort" }
collections = { path = "../libcollections" }
core = { path = "../libcore" }
libc = { path = "../rustc/libc_shim" }
rand = { path = "../librand" }
compiler_builtins = { path = "../libcompiler_builtins" }
pal_common = { path = "../libpal_common" }
rustc_unicode = { path = "../librustc_unicode" }
unwind = { path = "../libunwind" }

[target.'cfg(unix)'.dependencies]
pal_unix = { path = "../libpal_unix" }

[target.'cfg(windows)'.dependencies]
pal_windows = { path = "../libpal_windows" }

[build-dependencies]
build_helper = { path = "../build_helper" }
gcc = "0.3.27"

[features]
backtrace = []
jemalloc = ["alloc_jemalloc"]
debug-jemalloc = ["alloc_jemalloc/debug"]
